LAB5: created student version of keras ts part 1

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1_STUDENT.ipynb
@@ -26,7 +26,7 @@
     "* Construct a deep feedforward neural network for forecasting\n",
     "---\n",
     "\n",
-    "> **If you are struggling with the neural network aspects of this notebook then please note there is a Ordinary Least Squares regression version you can explore.  This covers the preprocessing and iterative and direct methods for forecasting.**\n"
+    "> **If you are struggling with the neural network aspects of this notebook then please note there is a [Ordinary Least Squares regression version you can explore](../../../05_autoregression/autoregression1.ipynb).  This covers the preprocessing and iterative and direct methods for forecasting.**\n"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "## 1. Python dependencies\n",
     "\n",
-    "It is recommended that you use the forecasting course conda environment provided for this work. We are going to implement neural networks using `tensorflow` and '`keras`. You should be using at least `tensorflow` version `2.1.0`."
+    "It is recommended that you use the forecasting course conda environment provided for this work `hds_stoch`. We are going to implement neural networks using `tensorflow` and '`keras`. You should be using **at least** `tensorflow` version `2.1.0`."
    ]
   },
   {
@@ -57,6 +57,12 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "#turn of tensorflow warnings when using predict in a loop.\n",
+    "#tf.get_logger().setLevel('WARNING')\n",
+    "\n",
+    "import logging\n",
+    "tf.get_logger().setLevel(logging.ERROR)\n",
     "\n",
     "tf.__version__"
    ]
@@ -124,7 +130,7 @@
     "```\n",
     "---\n",
     "\n",
-    "The function `sliding_window` illustrates how to preprocess time series data into tabular form  in python."
+    "The function `sliding_window` illustrates how to preprocess time series data into tabular form  in python.  Below the function is an example script to run it."
    ]
   },
   {
@@ -262,9 +268,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#script to train the model\n",
+    "\n",
+    "#set tensorflow random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "#### Try changing these parameters ###############\n",
     "N_EPOCHS = 100\n",
-    "WINDOW_SIZE = 5\n",
-    "es = EarlyStopping(monitor='val_loss', patience=2)\n",
+    "WINDOW_SIZE = 12\n",
+    "es = EarlyStopping(monitor='val_loss', patience=10)\n",
+    "##################################################\n",
     "\n",
     "#pre-process the data into sliding windows\n",
     "X_train, y_train = sliding_window(ts_data, window_size=WINDOW_SIZE)\n",
@@ -291,6 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#plot training and validation loss\n",
     "plt.plot(results.history['loss'], label='loss')\n",
     "plt.plot(results.history['val_loss'], label='val_loss')\n",
     "plt.legend()"
@@ -406,6 +420,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The logic above is implemented in the reusable function `autoregressive_iterative_forecast`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -457,6 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#test the function\n",
     "H = 5\n",
     "y_preds = autoregressive_iterative_forecast(model, X_test[0], h=H)\n",
     "print(f'Iterative forecast: {y_preds}')\n",
@@ -532,9 +554,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#plot results\n",
     "plt.plot(results.history['loss'], label='loss')\n",
     "plt.plot(results.history['val_loss'], label='val_loss')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also plot the fitted values against the ground truth observations.  To get the fitted values you need to call `.predict()` and pass in `X_train` (the X training data)."
    ]
   },
   {
@@ -549,6 +579,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally you make the forecast you need to call `autoregressive_iterative_forecast`.  \n",
+    "\n",
+    "> Note that you only need to pass in the first element from `X_test` i.e. `X_test[0]`.  This is because you are making an **iterative** forecast that starts from the latest ground truth data and works it way for"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -558,7 +597,7 @@
     "H = len(y_test)\n",
     "y_preds_iter = autoregressive_iterative_forecast(model, X_test[0], h=H)\n",
     "\n",
-    "#plot\n",
+    "#plot against test data\n",
     "plt.plot(y_preds_iter, label='iterative forecast method')\n",
     "plt.plot(y_test, label='ground truth')\n",
     "plt.legend()"
@@ -595,15 +634,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_direct_models(data, n_epochs, horizon, window_size, \n",
-    "                        train_length, save=True):\n",
+    "def train_direct_models(ts, n_epochs, horizon, window_size, \n",
+    "                        train_length, save=False):\n",
+    "    '''\n",
+    "    Train multiple models.  One for each forecast horizon.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    ts: array-like\n",
+    "        The FULL time series\n",
+    "        \n",
+    "    n_epochs: int\n",
+    "        Number of epoch for training\n",
+    "        \n",
+    "    horizon: int\n",
+    "        Forecast horizon in time units of the series\n",
+    "        \n",
+    "    window_size: int\n",
+    "        The number of lags to include in each model\n",
+    "        \n",
+    "    train_length: int\n",
+    "        Used in train test splot for each model\n",
+    "        \n",
+    "    save: bool, optional (default=False)\n",
+    "        Save the trained models to file.\n",
+    "        \n",
+    "    Returns:\n",
+    "    -------\n",
+    "        list of models\n",
+    "        \n",
+    "    '''\n",
     "    models = []\n",
     "\n",
     "    print('Training model =>', end=' ')\n",
     "    for h in range(horizon):\n",
     "        print(f'{h+1}', end=', ')\n",
     "        #preprocess time series training and test sets\n",
-    "        X_train, y_train = sliding_window(data, \n",
+    "        X_train, y_train = sliding_window(ts, \n",
     "                                          window_size=window_size, \n",
     "                                          horizon=h+1)\n",
     "\n",
@@ -692,7 +759,7 @@
     "    \n",
     "    Each model contained in @models has been trained\n",
     "    to predict a unique number of steps ahead. \n",
-    "    Each model forecasts and the results are \n",
+    "    Each model provides a single forecast and the results are \n",
     "    combined in an ordered array and returned.\n",
     "    \n",
     "    Parameters:\n",
@@ -806,12 +873,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.6 Forecasting a vector of y\n",
+    "## Exercises: Forecasting a vector of y\n",
     "\n",
     "In the **iterative** and **direct** methods we always forecast a *scalar* value.  An modification is to adapt a feedforward neural network to predict a **vector of y values**.  Using this architecture we would train our model on sliding windows of $X$ and $y$.  Where y is a vector of length $h$ and $X$ is a vector of length $ws$ (window size)\n",
     "\n",
-    "### 2.6.1 Exercise: preprocessing the time series into vectors of y\n",
-    "Task: modify the function `sliding_window` (provided below) so that it returns a vectors of y.\n",
+    "## Exercise 1: preprocessing the time series into vectors of y\n",
+    "**Task:**\n",
+    "* modify the function `sliding_window` (provided below) so that it returns a vectors of y.\n",
     "\n",
     "Hints:\n",
     "* Assume you are standing at time $t$. With a forecasting horizon of $h$, y would be $[y_{t+1}, y_{t+2}, ... , y_{t+h}]$.\n",
@@ -832,7 +900,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sliding_window(train, window_size=2, horizon=2):\n",
+    "#code to modify\n",
+    "def sliding_window(train, window_size=2, horizon=1):\n",
     "    '''\n",
     "    sliding window.\n",
     "    \n",
@@ -844,7 +913,7 @@
     "    window_size: int, optional (default=2)\n",
     "        lookback - how much lagged data to include.\n",
     "        \n",
-    "    horizon: int, optional (default=2)\n",
+    "    horizon: int, optional (default=1)\n",
     "        number of observations ahead to predict\n",
     "            \n",
     "    Returns:\n",
@@ -856,13 +925,14 @@
     "    tabular_y = []\n",
     "    \n",
     "    for i in range(0, len(train) - window_size - horizon):\n",
+    "        ########### MODIFICATIONS NEEDED HERE ###########################\n",
     "        X_train = train[i:window_size+i]\n",
-    "        #we use list slicing to return a vector of training for y_train\n",
-    "        y_train = train[i+window_size:i+window_size+horizon]\n",
+    "        y_train = train[i+window_size+horizon-1]\n",
+    "        ################################################################\n",
     "        tabular_X.append(X_train)\n",
     "        tabular_y.append(y_train)\n",
     "       \n",
-    "    return np.asarray(tabular_X), np.array(tabular_y)"
+    "    return np.asarray(tabular_X), np.asarray(tabular_y).reshape(-1, )"
    ]
   },
   {
@@ -904,7 +974,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.6.2 Build setup a model that predicts vectors in Keras"
+    "## Exercise 2: Build setup a model that predicts vectors in Keras\n",
+    "\n",
+    "**Task**\n",
+    "* Create a function called `get_target_vector_network_model` that creates and returns a `Sequential` model with **one** hidden (`Dense`) layer and a output layer that predicts 12 time periods ahead.\n",
+    "* Use relu activation in your hidden layers.\n",
+    "* Use the adam opimizer with a learning rate of 0.01 (but feel free to try others).\n",
+    "* Train the model.\n",
+    "\n",
+    "**Hints**\n",
+    "* Remember an output layer is just a `Dense` layer with 12 neurons.\n",
+    "* You may want to set a tensorflow random seed so that you can repeat your results. (e.g. 1234)"
    ]
   },
   {
@@ -913,84 +993,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_target_vector_network_model(ws, n_inputs, outputs, n_neurons=32,\n",
-    "                                    lr=0.01, metrics=None):\n",
-    "    if metrics is None:\n",
-    "        metrics = ['mse']\n",
-    "        \n",
-    "    model = Sequential()\n",
-    "    model.add(Input(shape=(ws,)))\n",
-    "    model.add(Dense(n_neurons, activation='relu'))\n",
-    "    model.add(Dense(outputs))\n",
-    "    model.compile(loss='mse', \n",
-    "                  optimizer=Adam(lr=lr),\n",
-    "                  metrics=metrics)\n",
-    "    return model"
+    "#your code here..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6.3 Train the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set tensorflow random seed\n",
-    "tf.random.set_seed(1234)\n",
+    "# Exercise 3: Predict a single vector ahead.\n",
     "\n",
-    "N_EPOCHS = 100\n",
-    "es = EarlyStopping(monitor='val_loss', patience=10)\n",
+    "Predicting a single vector ahead is actually making a h-step forecast.  This is done in exactly the same way as the other models using `.predict(X)`. For example assuming your model is called `model_v` you would run the following code to make a prediction.\n",
     "\n",
-    "#compile the tf model\n",
-    "model_v = get_target_vector_network_model(WINDOW_SIZE, \n",
-    "                                          n_inputs=len(y_train),\n",
-    "                                          outputs=HORIZON,\n",
-    "                                          metrics=['mse'])\n",
-    "\n",
-    "#fit the model\n",
-    "results_v = model_v.fit(x=X_train, \n",
-    "                        y=y_train, \n",
-    "                        epochs=N_EPOCHS,\n",
-    "                        validation_data=(X_test, y_test),\n",
-    "                        verbose=0,\n",
-    "                        callbacks=[es])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(results_v.history['loss'], label='loss')\n",
-    "plt.plot(results_v.history['val_loss'], label='val_loss')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.6.4 Predict a single vector ahead.\n",
-    "\n",
-    "Predicting a single vector ahead is actually making a h-step forecast.  This is done in exactly the same way as the other models using `.predict(X)`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "```python\n",
     "#to understand why we include [0] on the end comment it out and rerun the code.\n",
     "y_preds = model_v.predict(X_test[0].reshape(1, -1))[0]\n",
-    "y_preds"
+    "```\n",
+    "\n",
+    "**Task**\n",
+    "* Use your trained model to predict 12 time points (a single vector length) ahead."
    ]
   },
   {
@@ -999,31 +1019,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot the prediction\n",
-    "plt.plot(y_test[0], label='test')\n",
-    "plt.plot(y_preds, label='forecast')\n",
-    "plt.legend()"
+    "# your code here ..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6.5 Exercise predicting multiple vectors ahead (> h-steps)\n",
+    "# Exercise 4: predicting multiple vectors ahead (> h-steps)\n",
     "\n",
     "It is important to remember that with the vector output you predict in multiples of $h$.  So if you make two predictions you have predictions for 2h.  But in general this works in the same way as the iterative method.  Each time you forecast you replace $h$ values in the X vector with the predictions.\n",
     "\n",
     "**Task**: \n",
-    "* Modify `autoregressive_iterative_forecast` (provided below) so that it works with the new model.  After you are done rename the function `vector_iterative_forecast`\n",
+    "* Use the function `vector_iterative_forecast` (provided below) with your new vector outpuit model. \n",
     "* Predict 4 vector lengths ahead and plot the result against the test set.\n",
-    "\n",
-    "Hints:\n",
-    "\n",
-    "* For simplicity, you could make the parameter `h` the number of vectors ahead to predict.\n",
-    "* Each call of `model.predict(X)` returns a vector.  At the end of the iterative forecast you will have a list of vectors.  Call `np.concatenate(list)` to transform this into a single list.\n",
-    "* In the notebook the X and vectors are both of size 12 (`WINDOW_SIZE == 12` and `len(y_train[0]) == 12`). This means you could simplify your code for the example.  Alternatively it could work with different sized X and y vectors. \n",
-    "* Remember that `y_test` contains sliding windows of size 12.  So if you predict 2 vectors ahead then you will need to plot `y_test[0]` and `y_test[12]`\n",
-    "\n",
     "\n"
    ]
   },
@@ -1081,32 +1090,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H=4\n",
-    "y_preds = vector_iterative_forecast(model_v, X_test[0], H)\n",
-    "y_preds.shape"
+    "#your code here ..."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "y_test_to_plot = []\n",
-    "for i in range(H):\n",
-    "    y_test_to_plot.append(y_test[WINDOW_SIZE*i])\n",
-    "\n",
-    "plt.plot(np.concatenate(y_test_to_plot), label='test')\n",
-    "plt.plot(y_preds, label='forecast')\n",
-    "plt.legend()"
+    "# End of Lab"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf_gpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf_gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
