KERAS1: cleaned up turning off TF warnings

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1_SOLUTIONS.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1_SOLUTIONS.ipynb
@@ -58,9 +58,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "#turn of tensorflow warnings when using predict in a loop.\n",
-    "#tf.get_logger().setLevel('WARNING')\n",
-    "\n",
+    "#turn off tensorflow warnings when using predict in a loop.\n",
     "import logging\n",
     "tf.get_logger().setLevel(logging.ERROR)\n",
     "\n",
