LAB3: added function to lecture to view post trend rate of change

--- a/03_prophet/03_code_along_notebooks/prophet_code_along_SOLUTIONS.ipynb
+++ b/03_prophet/03_code_along_notebooks/prophet_code_along_SOLUTIONS.ipynb
@@ -246,6 +246,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Magnitude of the rate change at each changepoint:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_magnitude_of_rate_change(model):\n",
+    "    '''\n",
+    "    Plot posterior rate change by point\n",
+    "    '''\n",
+    "    deltas = model.params['delta'].reshape(-1, )\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(9,4))\n",
+    "    ax.bar(range(len(deltas)), deltas)\n",
+    "    ax.grid(b=True, which='major', c='gray', ls='-', lw=1, alpha=0.2)\n",
+    "    ax.set_ylabel('Rate change')\n",
+    "    ax.set_xlabel('Potential changepoint');\n",
+    "    return fig, ax\n",
+    "\n",
+    "fig, ax = plot_magnitude_of_rate_change(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Side bar: using plotly for interactive \n",
     "\n",
     "> This works in Colab and Juypter Notebooks.  there may be some issues in Jupyter-Lab.  i.e. it doesn't show up."
