--- a/03_prophet/03_code_along_notebooks/prophet_code_along_LIVE.ipynb
+++ b/03_prophet/03_code_along_notebooks/prophet_code_along_LIVE.ipynb
@@ -45,13 +45,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fbprophet\n",
+    "import prophet\n",
     "\n",
-    "from fbprophet import Prophet\n",
-    "from fbprophet.plot import plot_plotly, plot_components_plotly\n",
+    "from prophet import Prophet\n",
+    "from prophet.plot import (plot_plotly, plot_components_plotly,\n",
+    "                          add_changepoints_to_plot)\n",
     "\n",
-    "#should be version 0.6+\n",
-    "fbprophet.__version__"
+    "# should be version 1.0+\n",
+    "prophet.__version__"
    ]
   },
   {
@@ -101,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://raw.githubusercontent.com/hsma-master/hsma/master/12b_simple_forecasting/data/resp_admits_day.csv'\n",
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/resp_admits_day.csv'\n",
     "y_train = pd.read_csv(url, parse_dates=True, dayfirst=True, index_col='date')\n",
     "y_train.index.freq = 'D'\n",
     "\n",
@@ -141,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fit a basic prophet model with 0.95 PIs"
+    "# fit a basic prophet model with 0.95 PIs"
    ]
   },
   {
@@ -171,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make future data frame\n"
+    "# make future data frame\n"
    ]
   },
   {
@@ -180,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predict\n"
+    "# predict\n"
    ]
   },
   {
@@ -248,18 +250,11 @@
    "source": [
     "plot_components_plotly(model, prophet_forecast)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
