--- a/04_resp_case_study/forecasting_respiratory_admissions.ipynb
+++ b/04_resp_case_study/forecasting_respiratory_admissions.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "#arima\n",
+    "# arima\n",
     "from pmdarima import auto_arima, ARIMA\n",
     "import pmdarima as pm\n",
     "\n",
@@ -104,12 +104,12 @@
     }
    ],
    "source": [
-    "#basic prophet is very simple\n",
-    "from fbprophet import Prophet\n",
-    "import fbprophet\n",
+    "# prophet \n",
+    "from prophet import Prophet\n",
+    "import prophet\n",
     "\n",
-    "#should be version 0.6\n",
-    "fbprophet.__version__"
+    "#should be version 1.0+\n",
+    "prophet.__version__"
    ]
   },
   {
@@ -127,15 +127,6 @@
     "* Perform a train-test split holding back 84 days of data as a test set.\n",
     "* Plot the training data\n",
     "* Perform a seasonal decomposition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code here ..."
    ]
   },
   {
@@ -183,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train test split\n",
+    "# train test split\n",
     "holdout = 84\n",
     "training_length = len(admits) - holdout\n",
     "\n",
@@ -328,12 +319,12 @@
     }
    ],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "\n",
-    "#search for best model using auto_arima\n",
-    "#arima_model = auto_arima(train, m=7, suppress_warnings=True)\n",
+    "# search for best model using auto_arima\n",
+    "# arima_model = auto_arima(train, m=7, suppress_warnings=True)\n",
     "\n",
-    "#best model = (3, 1, 2)(1, 0, 1, 7)\n",
+    "# best model = (3, 1, 2)(1, 0, 1, 7)\n",
     "arima_model = ARIMA(order=(3, 1, 2), seasonal_order=(1, 0, 1, 7), \n",
     "                    suppress_warnings=True)\n",
     "arima_model.fit(train)"
@@ -460,7 +451,7 @@
     }
    ],
    "source": [
-    "#take a look at the best model.\n",
+    "# take a look at the best model.\n",
     "\n",
     "arima_model.summary()"
    ]
@@ -651,7 +642,7 @@
     }
    ],
    "source": [
-    "#plot the mean forecast and 95% prediction interval\n",
+    "# plot the mean forecast and 95% prediction interval\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(12,4))\n",
     "ax.plot(train['resp_admits'].iloc[-90:])\n",
@@ -685,7 +676,7 @@
     }
    ],
    "source": [
-    "#Calculate MAE\n",
+    "# Calculate MAE\n",
     "\n",
     "from pmdarima.metrics import smape\n",
     "\n",
@@ -1210,7 +1201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code goes here ..."
+    "# your code goes here ..."
    ]
   },
   {
@@ -1287,7 +1278,7 @@
     }
    ],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "\n",
     "#train test split\n",
     "holdout = 245\n",
@@ -2625,7 +2616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2639,7 +2630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
