LAB5: lr->learning_rate + typos

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1_SOLUTIONS.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1_SOLUTIONS.ipynb
@@ -35,7 +35,9 @@
    "source": [
     "## 1. Python dependencies\n",
     "\n",
-    "It is recommended that you use the forecasting course conda environment provided for this work `hds_stoch`. We are going to implement neural networks using `tensorflow` and '`keras`. You should be using **at least** `tensorflow` version `2.1.0`."
+    "It is recommended that you use the forecasting course conda environment provided for this work `hds_forecast`. We are going to implement neural networks using `tensorflow` and '`keras`. \n",
+    "\n",
+    "> This notebook has also been successfully tested in Google Colab."
    ]
   },
   {
@@ -50,7 +52,7 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "#tensorflow/keras imports\n",
+    "# tensorflow/keras imports\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.layers import Input, Dense, Flatten\n",
@@ -58,7 +60,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "#turn off tensorflow warnings when using predict in a loop.\n",
+    "# turn off tensorflow warnings when using predict in a loop.\n",
     "import logging\n",
     "tf.get_logger().setLevel(logging.ERROR)\n",
     "\n",
@@ -254,7 +256,7 @@
     "    \n",
     "    model = Sequential([Dense(1, input_shape=(ws,))])\n",
     "    model.compile(loss='mse', \n",
-    "                  optimizer=Adam(lr=lr),\n",
+    "                  optimizer=Adam(learning_rate=lr),\n",
     "                  metrics=metrics)\n",
     "    \n",
     "    return model"
@@ -266,9 +268,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#script to train the model\n",
+    "# script to train the model\n",
     "\n",
-    "#set tensorflow random seed\n",
+    "# set tensorflow random seed\n",
     "tf.random.set_seed(42)\n",
     "\n",
     "#### Try changing these parameters ###############\n",
@@ -277,15 +279,15 @@
     "es = EarlyStopping(monitor='val_loss', patience=10)\n",
     "##################################################\n",
     "\n",
-    "#pre-process the data into sliding windows\n",
+    "# pre-process the data into sliding windows\n",
     "X_train, y_train = sliding_window(ts_data, window_size=WINDOW_SIZE)\n",
     "\n",
-    "#train test split\n",
+    "# train test split\n",
     "training_length = int(len(y_train) * (2/3))\n",
     "X_train, X_test = X_train[:training_length], X_train[training_length:]\n",
     "y_train, y_test = y_train[:training_length], y_train[training_length:]\n",
     "\n",
-    "#compile the tf model\n",
+    "# compile the tf model\n",
     "model = get_linear_model(WINDOW_SIZE)\n",
     "\n",
     "results = model.fit(x=X_train, \n",
@@ -460,10 +462,10 @@
     "    for i in range(h):\n",
     "        #1 step forecast\n",
     "        y_pred = model.predict(current_X.reshape(1, -1))[0,0]\n",
-    "        #store prediction\n",
+    "        # store prediction\n",
     "        y_preds.append(y_pred)\n",
     "        \n",
-    "        #roll the array and insert forecast\n",
+    "        # roll the array and insert forecast\n",
     "        current_X = np.roll(current_X, shift=-1)\n",
     "        current_X[-1] = y_pred\n",
     "\n",
@@ -476,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test the function\n",
+    "# test the function\n",
     "H = 5\n",
     "y_preds = autoregressive_iterative_forecast(model, X_test[0], h=H)\n",
     "print(f'Iterative forecast: {y_preds}')\n",
@@ -503,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set the random seed so that we all get the same results\n",
+    "# set the random seed so that we all get the same results\n",
     "np.random.seed(12)\n",
     "t = np.arange(200)\n",
     "ts_data = np.cos(0.2 * t)\n",
@@ -518,26 +520,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set tensorflow random seed\n",
+    "# set tensorflow random seed\n",
     "tf.random.set_seed(1234)\n",
     "\n",
     "N_EPOCHS = 100\n",
     "WINDOW_SIZE = 12\n",
     "es = EarlyStopping(monitor='val_loss', patience=10)\n",
     "\n",
-    "#preprocess time series training and test sets\n",
+    "# preprocess time series training and test sets\n",
     "X_train, y_train = sliding_window(ts_data, window_size=WINDOW_SIZE)\n",
     "\n",
     "training_length = 130\n",
     "\n",
-    "#train-test split\n",
+    "# train-test split\n",
     "X_train, X_test = X_train[:training_length], X_train[training_length:]\n",
     "y_train, y_test = y_train[:training_length], y_train[training_length:]\n",
     "\n",
-    "#compile the tf model\n",
+    "# compile the tf model\n",
     "model = get_linear_model(WINDOW_SIZE, metrics=['mse'], lr=0.001)\n",
     "\n",
-    "#fit model silently\n",
+    "# fit model silently\n",
     "results = model.fit(x=X_train, \n",
     "                    y=y_train, \n",
     "                    epochs=N_EPOCHS,\n",
@@ -552,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot results\n",
+    "# plot results\n",
     "plt.plot(results.history['loss'], label='loss')\n",
     "plt.plot(results.history['val_loss'], label='val_loss')\n",
     "plt.legend()"
@@ -591,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make iterative predictions\n",
+    " #make iterative predictions\n",
     "H = len(y_test)\n",
     "y_preds_iter = autoregressive_iterative_forecast(model, X_test[0], h=H)\n",
     "\n",
@@ -667,25 +669,24 @@
     "    print('Training model =>', end=' ')\n",
     "    for h in range(horizon):\n",
     "        print(f'{h+1}', end=', ')\n",
-    "        #preprocess time series training and test sets\n",
+    "        # preprocess time series training and test sets\n",
     "        X_train, y_train = sliding_window(ts, \n",
     "                                          window_size=window_size, \n",
     "                                          horizon=h+1)\n",
     "\n",
-    "        #train-test split\n",
+    "        # train-test split\n",
     "        X_train, X_test = X_train[:train_length], X_train[train_length:]\n",
     "        y_train, y_test = y_train[:train_length], y_train[train_length:]\n",
     "\n",
-    "        #compile the tf model\n",
+    "        # compile the tf model\n",
     "        model_h = get_linear_model(window_size, metrics=['mse'], lr=0.001)\n",
     "\n",
     "    \n",
-    "        #fit model silently (verbose=0)\n",
+    "        # fit model silently (verbose=0)\n",
     "        results_h = model_h.fit(x=X_train, \n",
-    "                            y=y_train, \n",
-    "                            epochs=n_epochs,\n",
-    "                            verbose=0)\n",
-    "        \n",
+    "                                y=y_train, \n",
+    "                                epochs=n_epochs,\n",
+    "                                verbose=0)\n",
     "        if save:\n",
     "            model_h.save(f'./output/direct_model_h{h+1}.h5')\n",
     "\n",
@@ -718,7 +719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set tensorflow random seed\n",
+    "# set tensorflow random seed\n",
     "tf.random.set_seed(42)\n",
     "\n",
     "N_EPOCHS = 100\n",
@@ -788,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make the direct forecast\n",
+    "# make the direct forecast\n",
     "y_preds_direct = direct_forecast(direct_models, X_test[0])"
    ]
   },
@@ -798,14 +799,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for clarity repeat the preprocessing\n",
+    "# for clarity repeat the preprocessing\n",
     "X_train, y_train = sliding_window(ts_data, window_size=WINDOW_SIZE)\n",
     "\n",
-    "#train-test split\n",
+    "# train-test split\n",
     "X_train, X_test = X_train[:TRAIN_LENGTH], X_train[TRAIN_LENGTH:]\n",
     "y_train, y_test = y_train[:TRAIN_LENGTH], y_train[TRAIN_LENGTH:]\n",
     "\n",
-    "#plot the direct forecast against the test data\n",
+    "# plot the direct forecast against the test data\n",
     "plt.plot(y_preds_direct, label='direct forecast method')\n",
     "plt.plot(y_test, label='ground truth')\n",
     "plt.legend()"
@@ -824,7 +825,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot iterative and direct\n",
+    "# plot iterative and direct\n",
     "plt.plot(y_preds_direct, label='direct forecast method')\n",
     "plt.plot(y_preds_iter, label='iterative forecast method')\n",
     "plt.plot(y_test, label='ground truth', linestyle='-.')\n",
@@ -846,7 +847,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rmse iterative method\n",
+    "# rmse iterative method\n",
     "rmse(y_test, y_preds_iter)"
    ]
   },
@@ -856,7 +857,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rmse direct method\n",
+    "# rmse direct method\n",
     "rmse(y_test, y_preds_direct)"
    ]
   },
@@ -898,7 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code to modify\n",
+    "# code to modify\n",
     "def sliding_window(train, window_size=2, horizon=1):\n",
     "    '''\n",
     "    sliding window.\n",
@@ -939,7 +940,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#EXAMPLE SOLUTION\n",
+    "# EXAMPLE SOLUTION\n",
     "def sliding_window(train, window_size=2, horizon=2):\n",
     "    '''\n",
     "    sliding window.\n",
@@ -965,7 +966,7 @@
     "    \n",
     "    for i in range(0, len(train) - window_size - horizon):\n",
     "        X_train = train[i:window_size+i]\n",
-    "        #we use list slicing to return a vector of training for y_train\n",
+    "        # we use list slicing to return a vector of training for y_train\n",
     "        y_train = train[i+window_size:i+window_size+horizon]\n",
     "        tabular_X.append(X_train)\n",
     "        tabular_y.append(y_train)\n",
@@ -989,7 +990,7 @@
     "WINDOW_SIZE = 12\n",
     "HORIZON = 12\n",
     "TRAIN_LENGTH = 130\n",
-    "#for clarity repeat the preprocessing\n",
+    "# for clarity repeat the preprocessing\n",
     "X_train, y_train = sliding_window(ts_data, \n",
     "                                  window_size=WINDOW_SIZE,\n",
     "                                  horizon=HORIZON)\n",
@@ -1031,7 +1032,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here..."
+    "# your code here..."
    ]
   },
   {
@@ -1083,13 +1084,13 @@
     "N_EPOCHS = 100\n",
     "es = EarlyStopping(monitor='val_loss', patience=10)\n",
     "\n",
-    "#compile the tf model\n",
+    "# compile the tf model\n",
     "model_v = get_target_vector_network_model(WINDOW_SIZE, \n",
     "                                          n_inputs=len(y_train),\n",
     "                                          outputs=HORIZON,\n",
     "                                          metrics=['mse'])\n",
     "\n",
-    "#fit the model\n",
+    "# fit the model\n",
     "results_v = model_v.fit(x=X_train, \n",
     "                        y=y_train, \n",
     "                        epochs=N_EPOCHS,\n",
@@ -1132,7 +1133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#to understand why we include [0] on the end comment it out and rerun the code.\n",
+    "# to understand why we include [0] on the end comment it out and rerun the code.\n",
     "y_preds = model_v.predict(X_test[0].reshape(1, -1))[0]\n",
     "y_preds"
    ]
@@ -1143,7 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot the prediction\n",
+    "# plot the prediction\n",
     "plt.plot(y_test[0], label='test')\n",
     "plt.plot(y_preds, label='forecast')\n",
     "plt.legend()"
@@ -1217,7 +1218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here ..."
+    "# your code here ..."
    ]
   },
   {
@@ -1226,8 +1227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
-    "H=4\n",
+    "# example solution\n",
+    "H = 4\n",
     "y_preds = vector_iterative_forecast(model_v, X_test[0], H)\n",
     "y_preds.shape"
    ]
@@ -1250,7 +1251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1264,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
